# llm-wiki

./: .env.example  .git-blame-ignore-revs  .gitignore  AGENTS.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  SUPPORT.md  codex-hooks.example.json  codex-hooks.template.json  index.example.md  index.md  log.md  pyproject.toml  settings.example.json
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug-report.yml  feature-request.yml  installation-help.yml  use-case.yml
.github/workflows/: personal-data-check.yml  wiki-lint.yml
.obsidian/: app.json  graph.json  workspace.json
daily/: 2026-04-10.md  2026-04-11.md
docs/: claude-plan-creation-procedure.md  codex-integration-plan.md
docs/codex-tasks/: bug-compile-yaml-list-fix-planning-audit.md  bug-compile-yaml-list-fix-report.md  bug-compile-yaml-list-fix-work-verification.md  bug-compile-yaml-list-fix.md  bug-compile-yaml-list-project-frontmatter.md  bug-h-evidence-snapshot-2026-04-24-codex-review.md  bug-h-evidence-snapshot-2026-04-24-planning-audit.md  bug-h-evidence-snapshot-2026-04-24-report.md  bug-h-evidence-snapshot-2026-04-24.md  bug-h-issue-16-tracking-log.md  doctor-pipeline-correctness-24h-window-report.md  doctor-pipeline-correctness-24h-window.md  fix-codex-stop-broken-pipe-report.md  fix-codex-stop-broken-pipe.md  fix-codex-stop-hook-report.md  fix-codex-stop-hook.md  investigate-flush-agent-sdk-bug-g-report.md  investigate-flush-agent-sdk-bug-g.md  investigate-flush-py-bug-h-report.md  investigate-flush-py-bug-h.md  memory-claude-open-items-2026-04-26-claude-review.md  (+49 more)
hooks/: hook_utils.py  post-tool-capture.py  pre-compact.py  session-end.py  session-start.py  shared_context.py  shared_wiki_search.py  stop-wiki-reminder.py  user-prompt-wiki.py
reports/: lint-2026-04-10.md  lint-2026-04-11.md
scripts/: compile.py  config.py  doctor.py  flush.py  lint.py  profile_hook_retrieval.py  project_aliases.example.json  query.py  rebuild_index.py  runtime_utils.py  seed.py  setup.py  utils.py  wiki_cli.py
tests/: conftest.py  test_doctor.py  test_flush.py  test_hook_utils.py  test_lint.py  test_query.py  test_rebuild_index.py  test_utils.py
wiki/: overview.md
(+30 files in other folders)
