[project]
name = "llm-personal-kb"
version = "0.1.0"
description = "Personal knowledge base compiled from AI conversations — inspired by Karpathy's LLM Wiki"
requires-python = ">=3.12"
dependencies = [
    "claude-agent-sdk>=0.1.58",
    "python-dotenv>=1.2.2",
    "tzdata>=2026.1",
]

[tool.ruff]
line-length = 100
