[project]
name = "llm-personal-kb"
version = "0.1.0"
description = "Personal knowledge base compiled from AI conversations — inspired by Karpathy's LLM Wiki"
requires-python = ">=3.12"
dependencies = [
    "claude-agent-sdk>=0.1.59",
    "python-dotenv>=1.2.2",
    "tzdata>=2026.1",
]

[dependency-groups]
dev = [
    "ruff>=0.15",
    "pytest>=9.0",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
extend-select = ["I"]

[tool.ruff.lint.per-file-ignores]
"hooks/hook_utils.py" = ["I"]
"hooks/pre-compact.py" = ["I"]
"hooks/session-end.py" = ["I"]
