[project]
name = "llm-personal-kb"
version = "0.1.0"
description = "Personal knowledge base compiled from AI conversations — inspired by Karpathy's LLM Wiki"
requires-python = ">=3.12"
dependencies = [
    "claude-agent-sdk>=0.1.59",
    "python-dotenv>=1.2.2",
    "tzdata>=2026.1",
]

[dependency-groups]
dev = [
    "ruff>=0.15",
    "pytest>=9.0.3",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
extend-select = ["I"]

[tool.ruff.lint.per-file-ignores]
"hooks/hook_utils.py" = ["I"]
"hooks/pre-compact.py" = ["I"]
"hooks/session-end.py" = ["I"]

[tool.pytest.ini_options]
minversion = "9.0"
testpaths = ["tests"]
pythonpath = ["scripts", "hooks"]
addopts = "-ra --strict-markers --tb=short"

[tool.mypy]
explicit_package_bases = true
namespace_packages = true
mypy_path = ["scripts", "hooks"]
ignore_missing_imports = true

# Pre-existing type debt in these files is not part of the wiki-health scope.
# Clear up as a separate maintenance pass. This block only skips type-checking
# for the explicit list, so future files and changes stay checked.
[[tool.mypy.overrides]]
module = ["doctor", "lint", "seed", "codex.stop"]
ignore_errors = true
